--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:5000",
